# bird-ringing

./: .gitignore  Dockerfile.backend  Dockerfile.docx2pdf  Dockerfile.frontend  README.md  compose-dev.sh  compose-prod.sh  create-test-users  data-init  docker-compose.dev.yml  docker-compose.sh  docker-compose.yml
backend/: .gitignore  Dockerfile  README.md  create-test-users  docker-entrypoint.sh  entrypoint.sh  manage.py  pyproject.toml  update-uv-lock
backend/access_control/: permissions.py  urls.py  views.py
backend/bird_ringing/: asgi.py  helpers.py  settings.py  test_helpers.py  urls.py  views.py  wsgi.py
backend/licensing/: admin.py  communication_service.py  data_loading_validation.py  license_card_service.py  license_renderer.py  message_builder.py  models.py  permit_renderer.py  permit_service.py  rest.py  serializers.py  utils.py
backend/licensing/migrations/: 0001_initial.py  0002_actorimport_licenseimport_licensesequenceimport_and_more.py  0002_alter_licensepermission_ends_at_and_more.py  0003_alter_actor_language.py  0003_alter_licensesequence_status.py  0004_alter_actor_language.py  0004_alter_species_options.py  0005_licensedocument_fingerprint_and_more.py  0006_licensedocument_unique_current_doc_per_license_actor_type.py  0007_actor_birth_year.py  0007_alter_licensecommunication_status.py  0007_alter_licensedocument_type.py  0008_actor_birth_year_alter_licensedocument_type_and_more.py  0008_permitdnr.py  0009_alter_licenserelation_role.py  0010_alter_licenserelation_role.py  (+2 more)
backend/licensing/rest/: core.py  (+3 more)
backend/system/: urls.py  views.py
(+131 files in other folders)
